--- a/bin/com/dlpds/ui/MainUI.fxml
+++ b/bin/com/dlpds/ui/MainUI.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.dlpds.ui.MainController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.dlpds.ui.MainController">
    <bottom>
       <HBox BorderPane.alignment="CENTER">
          <children>
@@ -20,7 +20,7 @@
    <top>
       <ToolBar prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
         <items>
-            <Button fx:id="accountInq" layoutX="66.0" layoutY="13.0" mnemonicParsing="false" text="Account Inquiries">
+            <Button fx:id="accountInq" layoutX="66.0" layoutY="13.0" mnemonicParsing="false" onAction="#aiButtonAction" text="Account Inquiries">
                <padding>
                   <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
                </padding></Button>
@@ -28,7 +28,7 @@
                <padding>
                   <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
                </padding></Button>
-            <Button fx:id="accountHist" layoutX="122.0" layoutY="13.0" mnemonicParsing="false" text="Account History Inquiries">
+            <Button fx:id="accountHist" layoutX="122.0" layoutY="13.0" mnemonicParsing="false" onAction="#ahiButtonAction" text="Account History Inquiries">
                <padding>
                   <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
                </padding></Button>
@@ -36,10 +36,15 @@
                <padding>
                   <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
                </padding></Button>
-            <Button fx:id="contactBank" layoutX="234.0" layoutY="13.0" mnemonicParsing="false" text="Contact bank ">
+            <Button fx:id="contactBank" layoutX="234.0" layoutY="13.0" mnemonicParsing="false" onAction="#contactBankButtonAction" text="Contact bank ">
                <padding>
                   <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
                </padding></Button>
+            <Region>
+               <padding>
+                  <Insets bottom="8.0" left="8.0" right="9.0" top="9.0" />
+               </padding>
+            </Region>
             <Button fx:id="logout" layoutX="563.0" layoutY="13.0" mnemonicParsing="false" onAction="#logoutButtonAction" text="Logout">
                <padding>
                   <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
