--- a/src/com/dlpds/ui/MoneyTransfer.fxml
+++ b/src/com/dlpds/ui/MoneyTransfer.fxml
@@ -11,7 +11,7 @@
 	<children>
 		<HBox>
 			<children>
-				<Label text="your Account Number">
+				<Label text="Your Account Number">
                <HBox.margin>
                   <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
                </HBox.margin></Label>
