--- a/bin/com/dlpds/ui/MoneyTransfer.fxml
+++ b/bin/com/dlpds/ui/MoneyTransfer.fxml
@@ -52,7 +52,7 @@
             </TextField>
          </children>
       </HBox>
-      <Button fx:id="transfer" mnemonicParsing="false" text="Transfer">
+      <Button fx:id="transfer" mnemonicParsing="false" onAction="#transferButtonAction" text="Transfer">
          <VBox.margin>
             <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
          </VBox.margin>
