--- a/src/com/dlpds/ui/AccountDetails.fxml
+++ b/src/com/dlpds/ui/AccountDetails.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.collections.*?>
 
-<VBox xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.dlpds.ui.MainController">
+<VBox fx:id="changingVBox" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.dlpds.ui.MainController">
 	<children>
       <HBox layoutX="10.0" layoutY="10.0">
          <children>
@@ -17,7 +17,7 @@
                </HBox.margin>
             </Label>
             <Region HBox.hgrow="ALWAYS" />
-            <TextField editable="false">
+            <TextField fx:id="accNum" editable="false">
                <HBox.margin>
                   <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
                </HBox.margin>
@@ -32,14 +32,14 @@
                </HBox.margin>
             </Label>
             <Region HBox.hgrow="ALWAYS" />
-            <TextField editable="false">
+            <TextField fx:id="balance" editable="false">
                <HBox.margin>
                   <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
                </HBox.margin>
             </TextField>
          </children>
       </HBox>
-      <Button fx:id="transfer" mnemonicParsing="false" text="Ok">
+      <Button fx:id="confirm" mnemonicParsing="false" onAction="#confirmButtonAction" text="DISPLAY">
          <VBox.margin>
             <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
          </VBox.margin>
