--- a/bin/com/dlpds/ui/History.fxml
+++ b/bin/com/dlpds/ui/History.fxml
@@ -7,21 +7,30 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.collections.*?>
 
-<VBox prefHeight="241.0" prefWidth="550.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.dlpds.ui.MainController">
+<VBox fx:id="changingVBox4" prefHeight="241.0" prefWidth="550.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.dlpds.ui.MainController">
 	<children>
-      <TableView prefHeight="200.0" prefWidth="200.0">
+      <TableView fx:id="transactionTable" prefHeight="200.0" prefWidth="200.0">
         <columns>
-          <TableColumn prefWidth="112.0" text="User" />
-          <TableColumn prefWidth="108.0" text="Acc Number" />
-            <TableColumn prefWidth="128.0" text="Balance" />
-            <TableColumn minWidth="1.0" prefWidth="113.0" text="Type" />
-            <TableColumn prefWidth="84.0" text="Date" />
+          <TableColumn fx:id="date" prefWidth="112.0" text="Date" />
+          <TableColumn fx:id="from" prefWidth="151.0" text="From" />
+            <TableColumn fx:id="to" prefWidth="143.0" text="To" />
+            <TableColumn fx:id="amount" prefWidth="138.0" text="Amount" />
         </columns>
       </TableView>
       <HBox>
          <children>
+            <Label text="Available Balance">
+               <HBox.margin>
+                  <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
+               </HBox.margin>
+            </Label>
+            <TextField fx:id="displayBalance" editable="false">
+               <HBox.margin>
+                  <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
+               </HBox.margin>
+            </TextField>
             <Region HBox.hgrow="ALWAYS" />
-            <Button fx:id="transfer" mnemonicParsing="false" text="Ok">
+            <Button fx:id="displayButton" mnemonicParsing="false" onAction="#displayButtonAction" text="DISPLAY">
                <HBox.margin>
                   <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
                </HBox.margin>
